feat: 增强链接过滤，升级插件，优化测试与协议支持